[package]
name = "lopin"
version = "0.0.4"
edition = "2021"
license = "MIT"
description = "lopin - library of pipeline input"
authors = ["Sato <satohiroaki88@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.56"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
hyper-rustls = "0.23.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"