[package]
name = "lopin"
version = "0.1.12"
edition = "2021"
license = "MIT"
description = "lopin - library of pipeline input"
authors = ["Sato <satohiroaki88@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.56"
http-body-util = "0.1.2"
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = { version = "0.1.6", features = ["full"] }
regex = "1.10.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
tokio = "1.39.2"
